fix by comment 16.12